# engram

./: CLAUDE.md  INSTRUCTIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: edge-api-notes.md  ingestion.md  model-benchmark.md  self-improve.md
golden/: cases.json  harness.py  recall.py  recall_cases.json  scope_eval.py
src/engram/: archive.py  cli.py  client.py  config.py  consolidate.py  daemon.py  dashboard.py  embed.py  extract.py  journal.py  llm.py  mcp_server.py  models.py  protocol.py  redact.py  resolve.py  serve.py  store.py  sync.py  webui.py
src/engram/backend/: edge.py
tests/: conftest.py  test_capture.py  test_config.py  test_daemon.py  test_daemon_hardening.py  test_extract.py  test_journal.py  test_llm.py  test_m2.py  test_m3.py  test_map.py  test_privacy.py  test_redact.py  test_report.py  test_review.py  test_serve.py  test_shards.py  test_store.py
tools/: report.py
